V4066: General Update and OEE Added

--- a/Prevu.Synoptics.V4066_BRR/Details/D116.xaml
+++ b/Prevu.Synoptics.V4066_BRR/Details/D116.xaml
@@ -14,10 +14,7 @@
         <Labels:Pipe Color="Water" Width="70" RenderTransformOrigin="0.5,0.5" StatusComponent="110-01-MA1" Canvas.Left="176" Canvas.Top="273" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -28,30 +25,21 @@
         <Labels:Pipe Color="ByProduct" Width="39" RenderTransformOrigin="0.5,0.5" StatusComponent="116-01-MA1" Canvas.Left="310" Canvas.Top="207" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="104" RenderTransformOrigin="0.5,0.5" StatusComponent="116-01-MA1" Canvas.Left="181" Canvas.Top="88" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Color="Water" Width="104" RenderTransformOrigin="0.5,0.5" StatusComponent="116-21-CV1" Canvas.Left="181" Canvas.Top="88" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="40" RenderTransformOrigin="0.5,0.5" StatusComponent="116-01-MA1" Canvas.Left="201" Canvas.Top="120" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Color="Water" Width="40" RenderTransformOrigin="0.5,0.5" StatusComponent="116-21-CV2" Canvas.Left="201" Canvas.Top="120" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -59,9 +47,6 @@
             <Machines:CV_Valve_001.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="-1"/>
-                    <SkewTransform/>
-                    <RotateTransform/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Machines:CV_Valve_001.RenderTransform>
         </Machines:CV_Valve_001>
@@ -69,24 +54,12 @@
             <Machines:CV_Valve_001.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="-1"/>
-                    <SkewTransform/>
-                    <RotateTransform/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Machines:CV_Valve_001.RenderTransform>
         </Machines:CV_Valve_001>
         <Machines:V01_RTF_Microfilter Canvas.Left="125" Canvas.Top="132" Height="145" Width="168" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:Waste Height="46" Width="44" Canvas.Left="308" Canvas.Top="208" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Rectangle Height="46" Stroke="Black" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="208" Canvas.Top="285" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Rectangle.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Rectangle.RenderTransform>
-        </Rectangle>
+        <Rectangle Height="6" Stroke="Black" Width="46" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="188" Canvas.Top="305" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Rectangle Height="29" Stroke="Black" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="89" Canvas.Top="176" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="116-41-LT1" Canvas.Left="164" Canvas.Top="216" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="116-21-CV2" RenderTransformOrigin="0.5,0.5" Canvas.Top="79" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="19"/>
