--- a/Prevu.Synoptics.V4066_BRR/Pages/P020.xaml
+++ b/Prevu.Synoptics.V4066_BRR/Pages/P020.xaml
@@ -33,7 +33,7 @@
         <Labels:Pipe Width="92" StatusComponent="022-01-MA1" PipeHeight="Medium" Canvas.Left="560" Canvas.Top="327" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="40" StatusComponent="030-01-MA1" PipeHeight="Medium" Canvas.Left="967" Canvas.Top="134" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="225" Canvas.Top="532" StatusComponent="024-01-MA1" PipeHeight="Medium" Canvas.Left="297" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="85" StatusComponent="020-22-CV1" PipeHeight="Medium" Canvas.Left="352" Canvas.Top="327"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="85" StatusComponent="020-31-CV1" PipeHeight="Medium" Canvas.Left="352" Canvas.Top="327"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="168" StatusComponent="018-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="194" Canvas.Top="230">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -116,7 +116,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="301" StatusComponent="028-01-MA1" PipeHeight="Medium" Canvas.Left="440" Canvas.Top="745" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="214" StatusComponent="022-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="541" Canvas.Top="430" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="212" StatusComponent="022-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="542" Canvas.Top="429" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -171,6 +171,7 @@
         <Labels:JumpLabel JumpFromLabel="032-01-MA1" JumpToLabel="071-01-MA1" Canvas.Left="1201" Canvas.Top="605" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DetailsLabel ComponentName="018-LUB" DetailsPageName="D018" Canvas.Left="126" Canvas.Top="20" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="020-HYD" DetailsPageName="D020" Canvas.Left="32" Canvas.Top="405"/>
+        <Labels:DetailsLabel ComponentName="028-LUB" DetailsPageName="D028" Canvas.Left="324" Canvas.Top="615" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="030-01-MA1" Canvas.Left="774" Canvas.Top="16" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="028-41-LT1" Canvas.Left="146" Canvas.Top="697" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="098-01-MA1" Canvas.Left="1327" Canvas.Top="376" HorizontalAlignment="Left" VerticalAlignment="Top"/>
@@ -185,7 +186,6 @@
         <Labels:DeviceLabel ComponentName="018-01-YA1" Canvas.Left="337" Canvas.Top="86" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="042-01-MA1" Canvas.Left="1068" Canvas.Top="188" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="096-01-MA1" Canvas.Left="1196" Canvas.Top="282" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:DetailsLabel ComponentName="028-LUB" DetailsPageName="D028" Canvas.Left="324" Canvas.Top="615" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="028-01-MA1" Canvas.Left="432" Canvas.Top="680" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="028-01-YA1" Canvas.Left="536" Canvas.Top="681" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="024-01-MA1" Canvas.Left="504" Canvas.Top="561" HorizontalAlignment="Left" VerticalAlignment="Center"/>
