--- a/Prevu.Synoptics.V4066_BRR/Pages/P140.xaml
+++ b/Prevu.Synoptics.V4066_BRR/Pages/P140.xaml
@@ -8,7 +8,7 @@
              x:Class="Prevu.Synoptics.P140" mc:Ignorable="d"
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas >
-        <Labels:Pipe Width="60" StatusComponent="180-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="682" Canvas.Top="724" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="60" StatusComponent="180-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="682" Canvas.Top="724" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -36,8 +36,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="1230" StatusComponent="184-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="175" Canvas.Top="33" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="74" StatusComponent="184-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="140" Canvas.Top="68" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="1230" StatusComponent="184-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="175" Canvas.Top="33" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="74" StatusComponent="184-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="140" Canvas.Top="68" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -45,7 +45,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="53" StatusComponent="179-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="447" Canvas.Top="672" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="189" StatusComponent="129-01-MA1" PipeHeight="Medium" Canvas.Left="478" Canvas.Top="131"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="76" StatusComponent="129-01-MA1" PipeHeight="Medium" Canvas.Left="524" Canvas.Top="131"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="120" StatusComponent="155-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="88" Canvas.Top="586">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -70,24 +70,24 @@
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="137" StatusComponent="150-01-MA1" PipeHeight="Medium" Canvas.Left="1309" Canvas.Top="402"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Center" Width="203" StatusComponent="155-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="146" Canvas.Top="528"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="96" StatusComponent="180-01-MA1" Canvas.Left="710" Canvas.Top="752" Color="ByProduct"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="96" StatusComponent="180-01-MA1" Canvas.Left="710" Canvas.Top="752"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="59" StatusComponent="140-01-MA1" PipeHeight="Medium" Canvas.Left="1051" Canvas.Top="313"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="114" StatusComponent="128-01-MA1" PipeHeight="Medium" Canvas.Left="274" Canvas.Top="107"/>
-        <Labels:Pipe Width="362" StatusComponent="184-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1222" Canvas.Top="213" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="362" StatusComponent="184-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1222" Canvas.Top="213" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="338" StatusComponent="184-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1234" Canvas.Top="585" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="338" StatusComponent="184-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1234" Canvas.Top="585" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="142" StatusComponent="183-01-MA1" Canvas.Left="957" Canvas.Top="752" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="142" StatusComponent="183-01-MA1" Canvas.Left="957" Canvas.Top="752" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="66" StatusComponent="130-01-MA1" PipeHeight="Medium" Canvas.Left="772" Canvas.Top="194" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -104,7 +104,7 @@
         </Labels:Pipe>
         <Labels:Pipe Width="54" StatusComponent="130-01-MA1" PipeHeight="Medium" Canvas.Left="800" Canvas.Top="223" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="93" StatusComponent="172-01-MA1" Canvas.Left="220" Canvas.Top="648" HorizontalAlignment="Center" VerticalAlignment="Top" Color="ByProduct"/>
-        <Labels:Pipe Width="158" StatusComponent="184-01-MA1" Canvas.Left="1247" Canvas.Top="752" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="158" StatusComponent="184-01-MA1" Canvas.Left="1247" Canvas.Top="752" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:Pipe Width="122" StatusComponent="171-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="72" Canvas.Top="587" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
