--- a/Prevu.Synoptics.V4066_BRR/Pages/P350.xaml
+++ b/Prevu.Synoptics.V4066_BRR/Pages/P350.xaml
@@ -9,16 +9,16 @@
              x:Class="Prevu.Synoptics.P350" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
-        <Labels:Pipe Color="Water" Width="42" StatusComponent="373-01-MA1" VisibilitySignal="" VisibilityComponent="354-31-CV1" Canvas.Left="745" Canvas.Top="584" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Color="Water" Width="70" RenderTransformOrigin="0.5,0.5" StatusComponent="373-01-MA1" VisibilitySignal="" VisibilityComponent="354-31-CV1" Canvas.Left="671" Canvas.Top="533" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Color="Water" Width="42" StatusComponent="352-01-MA1" Canvas.Left="760" Canvas.Top="559" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Color="Water" Width="44" RenderTransformOrigin="0.5,0.5" StatusComponent="373-01-MA1" VisibilityComponent="354-31-CV1" Canvas.Left="684" Canvas.Top="520" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="471" Color="Water" StatusComponent="353-01-MA1" Canvas.Left="364" Canvas.Top="433" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Color="Water" Width="306" RenderTransformOrigin="0.5,0.5" StatusComponent="353-01-MA1" Canvas.Left="680" Canvas.Top="584" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="376" Color="Water" StatusComponent="353-01-MA1" Canvas.Left="364" Canvas.Top="433" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:Pipe Color="Water" Width="108" RenderTransformOrigin="0.5,0.5" StatusComponent="353-01-MA1" Canvas.Left="684" Canvas.Top="485" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -39,8 +39,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="120" StatusComponent="384-01-MA1" PipeHeight="Medium" Canvas.Left="1355" Canvas.Top="440" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="60" Color="Water" StatusComponent="519-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1111" Canvas.Top="336" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="84" StatusComponent="384-01-MA1" PipeHeight="Medium" Canvas.Left="1355" Canvas.Top="440" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="46" Color="Water" StatusComponent="519-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1118" Canvas.Top="343" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -99,7 +99,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="146" RenderTransformOrigin="0.5,0.5" StatusComponent="373-01-MA1" VisibilitySignal="" VisibilityComponent="354-31-CV1" Canvas.Left="712" Canvas.Top="655">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="164" RenderTransformOrigin="0.5,0.5" StatusComponent="352-01-MA1" Canvas.Left="718" Canvas.Top="639">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -115,17 +115,17 @@
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="182" StatusComponent="370-21-CV1" Canvas.Left="914" Canvas.Top="660"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="430" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="402" Canvas.Top="781"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="287" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="406" Canvas.Top="500">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Center" Width="286" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="406" Canvas.Top="500">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="200" StatusComponent="373-01-MA1" VisibilitySignal="" VisibilityComponent="354-31-CV1" Canvas.Left="508" Canvas.Top="500"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="200" StatusComponent="373-01-MA1" VisibilityComponent="354-31-CV1" Canvas.Left="508" Canvas.Top="500"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="290" Color="Water" StatusComponent="377-01-MA1" Canvas.Left="956" Canvas.Top="805"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="50" StatusComponent="352-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="621" Canvas.Top="568"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="32" StatusComponent="352-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="607" Canvas.Top="582">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="50" StatusComponent="352-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="636" Canvas.Top="543"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="32" StatusComponent="352-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="622" Canvas.Top="557">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -134,12 +134,10 @@
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="283" StatusComponent="373-01-MA1" Canvas.Left="187" Canvas.Top="500"/>
         <Rectangle HorizontalAlignment="Left" Height="34" Stroke="Black" VerticalAlignment="Center" Width="2" Canvas.Left="1000" Canvas.Top="630"/>
-        <Rectangle HorizontalAlignment="Left" Height="36" Stroke="Black" VerticalAlignment="Center" Width="2" RenderTransformOrigin="0.5,0.5" Canvas.Left="510" Canvas.Top="749"/>
-        <Ellipse HorizontalAlignment="Left" Height="16" Stroke="#FFBDBDBD" VerticalAlignment="Center" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="502" Canvas.Top="777"/>
         <Ellipse HorizontalAlignment="Left" Height="16" Stroke="#FFBDBDBD" VerticalAlignment="Center" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="994" Canvas.Top="654"/>
         <Machines:CV_Valve HorizontalAlignment="Left" VerticalAlignment="Center" Height="50" Width="50" RenderTransformOrigin="0.5,0.5" Canvas.Left="464" Canvas.Top="478"/>
         <Machines:CV_Valve_001 HorizontalAlignment="Left" VerticalAlignment="Center" Height="50" Width="50" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="1085" Canvas.Top="636"/>
-        <Machines:EXC_HeatExchanger HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="50" Height="70" Canvas.Left="378" Canvas.Top="608">
+        <Machines:EXC_HeatExchanger HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="50" Height="70" Canvas.Left="378" Canvas.Top="587">
             <Machines:EXC_HeatExchanger.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -155,7 +153,7 @@
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
         <Machines:V01_VRC_WaterTank Canvas.Left="740" Canvas.Top="715" Height="118" Width="236" ComponentName="370-41-LT1" TrendName="LEVEL" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:Waste HorizontalAlignment="Left" VerticalAlignment="Center" Height="46" Width="44" Canvas.Left="601" Canvas.Top="578"/>
+        <Machines:Waste HorizontalAlignment="Left" VerticalAlignment="Center" Height="46" Width="44" Canvas.Left="616" Canvas.Top="553"/>
         <Rectangle Height="4" StrokeThickness="2" Stroke="Black" Width="90" RenderTransformOrigin="0.5,0.5" Canvas.Left="1201" Canvas.Top="791" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Rectangle.RenderTransform>
                 <TransformGroup>
@@ -166,7 +164,7 @@
         <Machines:External Height="58" Width="60" RenderTransformOrigin="0.5,0.5" Canvas.Left="1216" Canvas.Top="701" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_WCE_Centrifuge Canvas.Left="212" Canvas.Top="10" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_SCW_Screw_wHopper Canvas.Left="553" Canvas.Top="110" Height="188" Width="214" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_VB_VibratingScreen Canvas.Left="659" Canvas.Top="558" Height="100" Width="100" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_VB_VibratingScreen Canvas.Left="674" Canvas.Top="533" Height="100" Width="100" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Rectangle Height="36" Stroke="Black" Width="2" RenderTransformOrigin="0.5,0.5" Canvas.Left="1195" Canvas.Top="158" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="1315" Canvas.Top="416" Height="58" Width="58" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_WCE_Centrifuge Canvas.Left="1083" Canvas.Top="150" Height="186" Width="214" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -178,22 +176,26 @@
             </Machines:CV_Valve.RenderTransform>
         </Machines:CV_Valve>
         <Machines:V01_VRC_WaterTank Canvas.Left="212" Canvas.Top="355" Height="107" Width="186" ComponentName="351-41-LT1" TrendName="LEVEL" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Rectangle Height="2" Stroke="Black" Width="54" Canvas.Left="349" Canvas.Top="686" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Ellipse Height="16" Stroke="#FFBDBDBD" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="395" Canvas.Top="679" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Rectangle Height="2" Stroke="Black" Width="54" Canvas.Left="349" Canvas.Top="752" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Ellipse Height="16" Stroke="#FFBDBDBD" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="395" Canvas.Top="745" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Rectangle Height="36" Stroke="Black" Width="2" RenderTransformOrigin="0.5,0.5" Canvas.Left="1165" Canvas.Top="771" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Ellipse Height="16" Stroke="#FFBDBDBD" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="1159" Canvas.Top="799" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Rectangle Height="4" StrokeThickness="2" Stroke="Black" Width="56" RenderTransformOrigin="0.5,0.5" Canvas.Left="1112" Canvas.Top="462" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:WaterPump Height="46" Width="44" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="462" Canvas.Top="413" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:WaterPump Height="46" Width="44" RenderTransformOrigin="0.5,0.5" Color="Chemicals" Canvas.Left="77" Canvas.Top="268" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="350-01-MA1" JumpToLabel="330-MIXER" Canvas.Left="24" Canvas.Top="9"/>
-        <Labels:JumpLabel JumpFromLabel="354-HEAT" JumpToLabel="330-MIXER" Direction="Left" Canvas.Left="108" Canvas.Top="468" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="350-01-MA1" JumpToLabel="330-WASHING" Canvas.Left="24" Canvas.Top="9"/>
+        <Labels:JumpLabel JumpFromLabel="354-HEAT" JumpToLabel="330-WASHING" Direction="Left" Canvas.Left="108" Canvas.Top="468" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="380-RINSE" JumpToLabel="519-01-MA1" Canvas.Left="883" Canvas.Top="201" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="384-01-MA1" JumpToLabel="420-01-MA1" Canvas.Left="1420" Canvas.Top="411"/>
         <Labels:DetailsLabel ComponentName="380-VALVE" DetailsPageName="D380" Canvas.Left="1257" Canvas.Top="114" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DetailsLabel ComponentName="380-RINSE" DetailsPageName="D380_2" Canvas.Left="1005" Canvas.Top="210" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="371-VIEW" DetailsPageName="D371" HideComponentName="True" Canvas.Left="728" Canvas.Top="332"/>
-        <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="354-HEAT" DetailsPageName="D354" Canvas.Left="318" Canvas.Top="618"/>
+        <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="354-HEAT" DetailsPageName="D354" Canvas.Left="318" Canvas.Top="597"/>
         <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="376-HOPPER" DetailsPageName="D376" HideComponentName="True" Canvas.Left="653" Canvas.Top="133"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="376-01-MA1" Loaded="DeviceLabel_Loaded" Canvas.Left="700" Canvas.Top="59"/>
-        <Labels:DeviceLabel ComponentName="371-ACS" RenderTransformOrigin="0.5,0.52" Canvas.Left="630" Canvas.Top="332" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="371-ACS" RenderTransformOrigin="0.5,0.52" Canvas.Left="626" Canvas.Top="332" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="370-44-FT1" Canvas.Left="956" Canvas.Top="592"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="370-21-CV1" Canvas.Left="1065" Canvas.Top="592"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="373-01-MA1" Canvas.Left="580" Canvas.Top="705"/>
@@ -202,10 +204,10 @@
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="350-01-MA1" Loaded="DeviceLabel_Loaded" Canvas.Left="435" Canvas.Top="34"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="370-41-LT1" Canvas.Left="760" Canvas.Top="743"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="377-01-MA1" Canvas.Left="1017" Canvas.Top="727"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="354-45-CT1" Canvas.Left="466" Canvas.Top="705"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="354-45-CT1" Canvas.Left="279" Canvas.Top="728"/>
         <Labels:DeviceLabel ComponentName="377-71-ES1" Canvas.Left="1263" Canvas.Top="777" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="376-41-LEV" Loaded="DeviceLabel_Loaded" Canvas.Left="553" Canvas.Top="133"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="352-01-MA1" Canvas.Left="665" Canvas.Top="624"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="352-01-MA1" Canvas.Left="680" Canvas.Top="599"/>
         <Labels:DeviceLabel ComponentName="380-01-MA1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="1297" Canvas.Top="181" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="384-01-MA1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="1299" Canvas.Top="478" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="380-DCE" RenderTransformOrigin="0.567,-2.17" Canvas.Left="1151" Canvas.Top="114" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -216,5 +218,6 @@
         <Labels:DeviceLabel ComponentName="377-44-FT1" Canvas.Left="1121" Canvas.Top="727" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="353-01-MA1" Canvas.Left="440" Canvas.Top="355" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="359-31-CV1" Canvas.Left="55" Canvas.Top="210" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="354-44-FT1" Canvas.Left="279" Canvas.Top="662" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
