--- a/Prevu.Synoptics.V4066_BRR/Pages/P530.xaml
+++ b/Prevu.Synoptics.V4066_BRR/Pages/P530.xaml
@@ -49,55 +49,32 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="116" StatusComponent="514-01-MA1" PipeHeight="Medium" Canvas.Left="137" Canvas.Top="193" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:Waste Height="46" Width="44" Canvas.Left="473" Canvas.Top="356" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:DRY_HeatingBattery Height="50" Width="52" Canvas.Left="158" Canvas.Top="432" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="104" Canvas.Top="432" HorizontalAlignment="Center" VerticalAlignment="Top" Height="50" Width="50"/>
-        <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="396" Canvas.Top="304" HorizontalAlignment="Center" VerticalAlignment="Top" Height="50" Width="50"/>
-        <Machines:V01_VS_Airlock Canvas.Left="218" Canvas.Top="265" Height="64" Width="62" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_DRY_FluidBedDryer Canvas.Left="230" Canvas.Top="409" Height="118" Width="202" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="528-01-MA1" JumpToLabel="514-01-MA1" Canvas.Left="64" Canvas.Top="163"/>
-        <Labels:DetailsLabel ComponentName="530-DRY" DetailsPageName="D530" Canvas.Left="133" Canvas.Top="380" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="530-01-MA1" Canvas.Left="288" Canvas.Top="458" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="532-01-MA1" Width="96" Canvas.Left="373" Canvas.Top="248" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="528-01-MA1" Canvas.Left="125" Canvas.Top="274" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="116" RenderTransformOrigin="0.5,0.5" StatusComponent="556-01-MA1" PipeHeight="Medium" Canvas.Left="711" Canvas.Top="300" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="80" RenderTransformOrigin="0.5,0.5" StatusComponent="559-01-MA1" PipeHeight="Medium" Canvas.Left="1242" Canvas.Top="559" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="122" RenderTransformOrigin="0.5,0.5" StatusComponent="557-01-EC1" PipeHeight="Medium" Canvas.Left="978" Canvas.Top="462" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="89" RenderTransformOrigin="0.5,0.5" StatusComponent="548-01-MA1" Canvas.Left="369" Canvas.Top="702" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="64" RenderTransformOrigin="0.5,0.5" StatusComponent="548-01-MA1" PipeHeight="Medium" Canvas.Left="736" Canvas.Top="172" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="64" RenderTransformOrigin="0.5,0.5" StatusComponent="548-01-MA1" PipeHeight="Medium" Canvas.Left="737" Canvas.Top="172" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -105,55 +82,57 @@
         <Labels:Pipe Width="62" RenderTransformOrigin="0.5,0.5" StatusComponent="546-01-MA1" PipeHeight="Medium" Canvas.Left="445" Canvas.Top="666" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="89" RenderTransformOrigin="0.5,0.5" StatusComponent="568-01-MA1" Canvas.Left="1175" Canvas.Top="708" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="89" RenderTransformOrigin="0.5,0.5" StatusComponent="568-01-MA1" Canvas.Left="1178" Canvas.Top="708" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="148" RenderTransformOrigin="0.5,0.5" StatusComponent="568-01-MA1" PipeHeight="Medium" Canvas.Left="1287" Canvas.Top="706" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="62" RenderTransformOrigin="0.5,0.5" StatusComponent="566-01-MA1" PipeHeight="Medium" Canvas.Left="1251" Canvas.Top="671" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="127" StatusComponent="559-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1159" Canvas.Top="524" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="566" RenderTransformOrigin="0.5,0.5" StatusComponent="548-01-MA1" PipeHeight="Medium" Canvas.Left="385" Canvas.Top="423" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <RotateTransform Angle="90"/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="110" RenderTransformOrigin="0.5,0.5" StatusComponent="548-01-MA1" PipeHeight="Medium" Canvas.Left="663" Canvas.Top="145" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:Waste Height="46" Width="44" Canvas.Left="473" Canvas.Top="356" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:DRY_HeatingBattery Height="50" Width="52" Canvas.Left="158" Canvas.Top="432" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="104" Canvas.Top="432" HorizontalAlignment="Center" VerticalAlignment="Top" Height="50" Width="50"/>
+        <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="396" Canvas.Top="304" HorizontalAlignment="Center" VerticalAlignment="Top" Height="50" Width="50"/>
+        <Machines:V01_VS_Airlock Canvas.Left="218" Canvas.Top="265" Height="64" Width="62" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_DRY_FluidBedDryer Canvas.Left="230" Canvas.Top="409" Height="118" Width="202" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_ALV_VibratingFeeder Canvas.Left="749" Canvas.Top="351" RenderTransformOrigin="0.5,0.5" Width="208" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:VS_Airlock Height="60" Width="64" Canvas.Left="737" Canvas.Top="199" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:NT_ConveyorBelt Height="3" Width="136" RenderTransformOrigin="0.5,0.5" Canvas.Left="919" Canvas.Top="394" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:SCW_ScrewConveyor_straight RenderTransformOrigin="0.5,0.5" Width="150" Height="22" Canvas.Left="1026" Canvas.Top="519" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_ScarpaTrasporto Canvas.Left="446" Canvas.Top="672" Height="43" Width="66" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_ScarpaTrasporto Canvas.Left="1250" Canvas.Top="677" Height="43" Width="66" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_ScarpaTrasporto Canvas.Left="1253" Canvas.Top="677" Height="43" Width="66" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_VS_Airlock Canvas.Left="447" Canvas.Top="590" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_VS_Airlock Canvas.Left="740" Canvas.Top="199" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_VS_Airlock Canvas.Left="1253" Canvas.Top="595" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="1145" Canvas.Top="685" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="1148" Canvas.Top="685" Height="50" Width="50" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="339" Canvas.Top="679" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:JumpLabel JumpFromLabel="568-01-MA1" JumpToLabel="808-31-CV1" Canvas.Left="1408" Canvas.Top="676" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="528-01-MA1" JumpToLabel="514-01-MA1" Canvas.Left="64" Canvas.Top="163"/>
+        <Labels:DetailsLabel ComponentName="530-DRY" DetailsPageName="D530" Canvas.Left="133" Canvas.Top="380" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="548-01-MA1" Canvas.Left="318" Canvas.Top="625" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="546-01-MA1" Canvas.Left="512" Canvas.Top="599" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="556-01-MA1" Canvas.Left="808" Canvas.Top="205" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="568-01-MA1" Canvas.Left="1124" Canvas.Top="630" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="568-01-MA1" Canvas.Left="1127" Canvas.Top="630" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="566-01-MA1" Canvas.Left="1311" Canvas.Top="552" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="559-01-MA1" Canvas.Left="1114" Canvas.Top="464" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="557-01-EC1" Canvas.Left="909" Canvas.Top="311" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="566" RenderTransformOrigin="0.5,0.5" StatusComponent="548-01-MA1" PipeHeight="Medium" Canvas.Left="385" Canvas.Top="423" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="110" RenderTransformOrigin="0.5,0.5" StatusComponent="548-01-MA1" PipeHeight="Medium" Canvas.Left="663" Canvas.Top="145" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:JumpLabel JumpFromLabel="568-01-MA1" JumpToLabel="808-31-CV1" Canvas.Left="1408" Canvas.Top="676" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="530-01-MA1" Canvas.Left="288" Canvas.Top="458" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="532-01-MA1" Width="96" Canvas.Left="373" Canvas.Top="248" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="528-01-MA1" Canvas.Left="125" Canvas.Top="274" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
