--- a/Prevu.Synoptics.V4066_BRR/Pages/P880.xaml
+++ b/Prevu.Synoptics.V4066_BRR/Pages/P880.xaml
@@ -24,7 +24,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="60" StatusComponent="880-01-ES6" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="430" Canvas.Top="412" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="32" StatusComponent="880-01-ES6" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="444" Canvas.Top="426" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -97,7 +97,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="324" StatusComponent="880-01-EC1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="166" Canvas.Top="576" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="294" StatusComponent="880-01-EC1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="181" Canvas.Top="561" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -122,7 +122,7 @@
         </Labels:Pipe>
         <Labels:Pipe Width="132" StatusComponent="880-01-EC1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="163" Canvas.Top="485" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="53" StatusComponent="880-01-ES6" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="423" Canvas.Top="485" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="108" RenderTransformOrigin="0.5,0.5" StatusComponent="884-01-MA1" Color="Air" Canvas.Left="694" Canvas.Top="762" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="192" RenderTransformOrigin="0.5,0.5" StatusComponent="884-01-MA1" Color="Air" Canvas.Left="694" Canvas.Top="762" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="56" RenderTransformOrigin="0.5,0.5" StatusComponent="884-01-MA1" Canvas.Left="592" Canvas.Top="762" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:Pipe Width="62" RenderTransformOrigin="0.5,0.5" StatusComponent="883-01-MA1" Canvas.Left="634" Canvas.Top="727" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
@@ -131,14 +131,43 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="74" RenderTransformOrigin="0.5,0.5" StatusComponent="970-02-MA1" Canvas.Left="1167" Canvas.Top="522" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Top">
+        <Labels:Pipe Width="74" RenderTransformOrigin="0.5,0.5" StatusComponent="970-02-MA1" Canvas.Left="1187" Canvas.Top="332" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="95" RenderTransformOrigin="0.5,0.5" StatusComponent="970-01-MA1" Canvas.Left="1079" Canvas.Top="334" Color="Air" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="95" RenderTransformOrigin="0.5,0.5" StatusComponent="970-01-MA1" Canvas.Left="1099" Canvas.Top="144" Color="Air" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="257" StatusComponent="884-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="882" Canvas.Top="427" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="74" StatusComponent="884-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1100" Canvas.Top="462" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <RotateTransform Angle="90"/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="90" StatusComponent="884-01-MA1" RenderTransformOrigin="0.5,0.5" VisibilityComponent="899-31-CV1" VisibilitySignal="LS1" Canvas.Left="1025" Canvas.Top="579" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <RotateTransform Angle="90"/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="106" StatusComponent="884-01-MA1" RenderTransformOrigin="0.5,0.5" VisibilityComponent="899-31-CV1" VisibilitySignal="LS2" Canvas.Left="1151" Canvas.Top="577" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <RotateTransform Angle="90"/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="338" StatusComponent="884-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="715" Canvas.Top="595" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <RotateTransform Angle="90"/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
         <Machines:VRC_WaterCollectingTank Height="45" Width="22" Canvas.Left="299" Canvas.Top="154" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_FKS_FlakesSorter_DoubleCH Canvas.Left="249" Canvas.Top="196" Height="234" Width="257" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Rectangle Height="51" Stroke="Black" Width="2" RenderTransformOrigin="0.5,0.5" Canvas.Left="312" Canvas.Top="120" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -166,14 +195,17 @@
         <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="563" Canvas.Top="739" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_VS_Airlock Canvas.Left="640" Canvas.Top="659" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_ScarpaTrasporto Canvas.Left="633" Canvas.Top="728" Height="46" Width="73" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_EC_FiltroManiche Canvas.Left="1148" Canvas.Top="320" Width="134" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Machines:V01_Waste Canvas.Left="1184" Canvas.Top="552" HorizontalAlignment="Left" Height="34" VerticalAlignment="Top" Width="40"/>
-        <Machines:V01_Material_Inlet_Outlet Canvas.Left="1052" Canvas.Top="309" Height="60" Width="42"/>
-        <TextBlock TextWrapping="Wrap" Height="58" Width="122" TextAlignment="Center" FontSize="20" Foreground="White" Text="{lex:Loc MACHINES EXHAUST}" Canvas.Left="930" Canvas.Top="313" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_EC_FiltroManiche Canvas.Left="1168" Canvas.Top="130" Width="134" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_Waste Canvas.Left="1204" Canvas.Top="362" HorizontalAlignment="Center" Height="34" VerticalAlignment="Top" Width="40"/>
+        <Machines:V01_Material_Inlet_Outlet Canvas.Left="1072" Canvas.Top="119" Height="60" Width="42" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_DV_DoubleBagsDiverter Canvas.Left="1055" Canvas.Top="464" Height="86" Width="164" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_BBF_DoubleBag Canvas.Left="994" Canvas.Top="591" Height="166" Width="286" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <TextBlock TextWrapping="Wrap" Height="60" Width="213" TextAlignment="Center" FontSize="20" Foreground="White" Text="{lex:Loc FLAKES SORTER EXHAUST}" Canvas.Left="859" Canvas.Top="119" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:JumpLabel JumpFromLabel="880-01-EC1" JumpToLabel="878-01-MA1" Canvas.Left="104" Canvas.Top="27" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:JumpLabel JumpFromLabel="888-01-MA1" JumpToLabel="889-31-CV1" Canvas.Left="429" Canvas.Top="771" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:JumpLabel JumpFromLabel="884-01-MA1" JumpToLabel="899-BAGS" Canvas.Left="748" Canvas.Top="730" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:DetailsLabel ComponentName="880-HOPPER" DetailsPageName="D880" HideComponentName="True" Canvas.Left="363" Canvas.Top="218" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DetailsLabel ComponentName="970-FILTER" DetailsPageName="D970" Canvas.Left="1204" Canvas.Top="73" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DetailsLabel ComponentName="899-BAGS" DetailsPageName="D899" Canvas.Left="1111" Canvas.Top="645" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="880-42-LEV" Canvas.Left="395" Canvas.Top="218" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="880-41-LEV" Canvas.Left="265" Canvas.Top="218" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="880-01-EC1" Canvas.Left="209" Canvas.Top="346" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -187,6 +219,6 @@
         <Labels:DeviceLabel ComponentName="887-01-MA1" Canvas.Left="357" Canvas.Top="699" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel ComponentName="884-01-MA1" Canvas.Left="543" Canvas.Top="684" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:DeviceLabel ComponentName="883-01-MA1" Canvas.Left="694" Canvas.Top="658" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:DetailsLabel ComponentName="970-FILTER" DetailsPageName="D970" Canvas.Left="1184" Canvas.Top="263" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="899-31-CV1" Canvas.Left="1091" Canvas.Top="532" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
