--- a/Prevu.Synoptics.V4066_BRR/PlantView.xaml
+++ b/Prevu.Synoptics.V4066_BRR/PlantView.xaml
@@ -14,6 +14,8 @@
              mc:Ignorable="d" 
              d:Background="{DynamicResource MaterialDesignPaper}" >
     <Canvas Height="1067" Width="2194" >
+        <Machines:QX_HMI Height="66" Width="56" Canvas.Left="211" Canvas.Top="331" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:QX_LongElectricalCabinet Width="188" Height="74" Canvas.Left="571" Canvas.Top="141" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:QX_LongElectricalCabinet Width="188" Height="74" Canvas.Left="331" Canvas.Top="141" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:QX_LongElectricalCabinet Width="188" Height="74" Canvas.Left="1162" Canvas.Top="141" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:QX_LongElectricalCabinet Width="188" Height="74" Canvas.Left="1399" Canvas.Top="141" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -43,6 +45,10 @@
         <Labels:GroupLabel GroupName="460" Canvas.Left="2013" Canvas.Top="430" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:GroupLabel GroupName="430" Canvas.Left="2013" Canvas.Top="290" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:GroupLabel GroupName="510" Canvas.Left="388" Canvas.Top="785" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:GroupLabel GroupName="997" Canvas.Left="748" Canvas.Top="926" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:GroupLabel GroupName="140" Canvas.Left="632" Canvas.Top="290" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:GroupLabel GroupName="170" Canvas.Left="632" Canvas.Top="361" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:GroupLabel GroupName="557" Canvas.Left="388" Canvas.Top="925" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="Q91" Canvas.Left="626" Canvas.Top="573" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="ESTOP-AREA-01" Canvas.Left="72" Canvas.Top="83" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="Q21" Canvas.Left="324" Canvas.Top="83" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -73,16 +79,11 @@
         <Labels:DeviceLabel ComponentName="Q61-POWER" Canvas.Left="2056" Canvas.Top="83" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="Q71-POWER" Canvas.Left="431" Canvas.Top="571" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="Q91-POWER" Canvas.Left="738" Canvas.Top="573" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:GroupLabel GroupName="997" Canvas.Left="748" Canvas.Top="926" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Machines:QX_HMI Height="66" Width="56" Canvas.Left="211" Canvas.Top="331" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="HMI-03" Canvas.Left="194" Canvas.Top="283" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:QX_LongElectricalCabinet Width="188" Height="74" Canvas.Left="571" Canvas.Top="141" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:GroupLabel GroupName="140" Canvas.Left="632" Canvas.Top="290" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:GroupLabel GroupName="170" Canvas.Left="632" Canvas.Top="361" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="Q31" Canvas.Left="564" Canvas.Top="83" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="S310" Canvas.Left="620" Canvas.Top="227" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="Q31-POWER" Canvas.Left="676" Canvas.Top="83" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:GroupLabel GroupName="557" Canvas.Left="388" Canvas.Top="925" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-
+        <Labels:DeviceLabel ComponentName="OEE-WATER" Canvas.Left="72" Canvas.Top="461" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="OEE-POWER" Canvas.Left="72" Canvas.Top="534" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
