--- a/Prevu.Synoptics.V4066_BRR/Details/D018.xaml
+++ b/Prevu.Synoptics.V4066_BRR/Details/D018.xaml
@@ -25,13 +25,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Rectangle Height="46" Stroke="Black" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="132" Canvas.Top="126" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Rectangle.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Rectangle.RenderTransform>
-        </Rectangle>
+        <Rectangle Height="6" Stroke="Black" Width="46" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="112" Canvas.Top="146" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Rectangle Height="6" Stroke="Black" Width="46" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="174" Canvas.Top="146" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Machines:CV_Valve RenderTransformOrigin="0.5,0.5" Height="48" Width="56" Canvas.Left="107" Canvas.Top="39" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Machines:CV_Valve.RenderTransform>
                 <TransformGroup>
@@ -46,13 +41,6 @@
                 </TransformGroup>
             </Machines:CV_Valve.RenderTransform>
         </Machines:CV_Valve>
-        <Rectangle Height="46" Stroke="Black" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="194" Canvas.Top="126" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Rectangle.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Rectangle.RenderTransform>
-        </Rectangle>
         <Labels:DeviceLabel ComponentName="018-25-CV1" Canvas.Left="17" Canvas.Top="35" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="018-25-CV2" Height="50" Canvas.Left="229" Canvas.Top="35" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     </Canvas>
