--- a/Prevu.Synoptics.V4066_BRR/Pages/P230.xaml
+++ b/Prevu.Synoptics.V4066_BRR/Pages/P230.xaml
@@ -9,14 +9,11 @@
              x:Class="Prevu.Synoptics.P230" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
-        <Labels:Pipe Width="187" StatusComponent="170-01-MA1" PipeHeight="Medium" Canvas.Left="90" Canvas.Top="66" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="159" StatusComponent="170-01-MA1" PipeHeight="Medium" Canvas.Left="118" Canvas.Top="66" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Color="Water" Width="172" StatusComponent="292-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="142" Canvas.Top="596" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -26,10 +23,7 @@
         <Labels:Pipe Width="143" StatusComponent="291-01-MA1" Canvas.Left="885" Canvas.Top="95" Color="Water" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -37,10 +31,7 @@
         <Labels:Pipe Color="Water" Width="168" StatusComponent="292-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="913" Canvas.Top="594" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform />
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform />
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -52,14 +43,11 @@
         <Labels:Pipe Width="62" StatusComponent="291-01-MA1" Canvas.Left="529" Canvas.Top="164" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="95" StatusComponent="229-31-CV1" Canvas.Left="632" Canvas.Top="164" HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water"/>
         <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="270" StatusComponent="228-01-MA1" PipeHeight="Medium" Canvas.Left="786" Canvas.Top="212" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="229-01-MA1" VisibilitySignal="LS2"/>
-        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="423" StatusComponent="228-01-MA1" PipeHeight="Medium" Canvas.Left="280" Canvas.Top="212" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="229-01-MA1" VisibilitySignal="LS3"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="136" RenderTransformOrigin="0.5,0.5" StatusComponent="230-01-MA1" PipeHeight="Medium" Canvas.Left="215" Canvas.Top="487">
+        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="425" StatusComponent="228-01-MA1" PipeHeight="Medium" Canvas.Left="278" Canvas.Top="212" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="229-01-MA1" VisibilitySignal="LS3"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="90" RenderTransformOrigin="0.5,0.5" StatusComponent="230-01-MA1" PipeHeight="Medium" Canvas.Left="238" Canvas.Top="510">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -67,10 +55,7 @@
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="130" StatusComponent="228-01-MA1" PipeHeight="Medium" Canvas.Left="218" Canvas.Top="273" VisibilityComponent="229-01-MA1" VisibilitySignal="LS3">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -78,75 +63,54 @@
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="88" PipeHeight="Medium" StatusComponent="228-01-MA1" Canvas.Left="701" Canvas.Top="105">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="72" StatusComponent="232-01-MA1" PipeHeight="Medium" Canvas.Left="367" Canvas.Top="664">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="72" StatusComponent="232-01-MA1" PipeHeight="Medium" Canvas.Left="370" Canvas.Top="664">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="169" RenderTransformOrigin="0.5,0.5" StatusComponent="232-01-MA1" PipeHeight="Medium" Canvas.Left="398" Canvas.Top="697"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="200" RenderTransformOrigin="0.5,0.5" StatusComponent="229-21-CV1" Canvas.Left="208" Canvas.Top="694">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="166" RenderTransformOrigin="0.5,0.5" StatusComponent="232-01-MA1" PipeHeight="Medium" Canvas.Left="401" Canvas.Top="697"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="150" RenderTransformOrigin="0.5,0.5" StatusComponent="229-21-CV1" Canvas.Left="233" Canvas.Top="719">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="51" StatusComponent="292-01-MA1" Canvas.Left="226" Canvas.Top="545"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="699" StatusComponent="292-01-MA1" Canvas.Left="300" Canvas.Top="512"/>
-        <Labels:Pipe Width="136" RenderTransformOrigin="0.5,0.5" StatusComponent="240-01-MA1" PipeHeight="Medium" Canvas.Left="984" Canvas.Top="488" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="94" RenderTransformOrigin="0.5,0.5" StatusComponent="240-01-MA1" PipeHeight="Medium" Canvas.Left="1005" Canvas.Top="509" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="88" RenderTransformOrigin="0.5,0.5" StatusComponent="244-01-MA1" PipeHeight="Medium" Canvas.Left="1344" Canvas.Top="694" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="134" StatusComponent="228-01-MA1" PipeHeight="Medium" Canvas.Left="985" Canvas.Top="276" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="229-01-MA1" VisibilitySignal="LS2">
+        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="136" StatusComponent="228-01-MA1" PipeHeight="Medium" Canvas.Left="984" Canvas.Top="275" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="229-01-MA1" VisibilitySignal="LS2">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="70" StatusComponent="242-01-MA1" PipeHeight="Medium" Canvas.Left="1137" Canvas.Top="664" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="70" StatusComponent="242-01-MA1" PipeHeight="Medium" Canvas.Left="1140" Canvas.Top="664" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="165" RenderTransformOrigin="0.5,0.5" StatusComponent="242-01-MA1" PipeHeight="Medium" Canvas.Left="1168" Canvas.Top="694" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Color="Water" Width="196" RenderTransformOrigin="0.5,0.5" StatusComponent="242-01-MA1" Canvas.Left="978" Canvas.Top="691" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="163" RenderTransformOrigin="0.5,0.5" StatusComponent="242-01-MA1" PipeHeight="Medium" Canvas.Left="1170" Canvas.Top="694" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Color="Water" Width="150" RenderTransformOrigin="0.5,0.5" StatusComponent="242-01-MA1" Canvas.Left="1001" Canvas.Top="714" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -156,20 +120,14 @@
         <Labels:Pipe Width="86" StatusComponent="291-01-MA1" Canvas.Left="488" Canvas.Top="123" Color="Water" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="34" StatusComponent="291-01-MA1" Canvas.Left="514" Canvas.Top="41" Color="Water" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -177,6 +135,7 @@
         <Labels:Pipe Width="128" StatusComponent="246-01-MA1" Color="Water" Canvas.Left="1111" Canvas.Top="799" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="1315" Canvas.Top="668" Height="60" Width="60" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="549" Canvas.Top="672" Height="60" Width="60" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:NT_ConveyorBelt Height="3" Width="206" RenderTransformOrigin="0.5,0.5" Canvas.Left="240" Canvas.Top="61" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:CV_Valve Canvas.Left="583" Canvas.Top="151" HorizontalAlignment="Center" VerticalAlignment="Top" Height="31" Width="52"/>
         <Machines:CV_Valve Canvas.Left="853" Canvas.Top="151" Height="31" Width="52" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Rectangle Height="102" Stroke="White" StrokeThickness="2" Width="118" RadiusX="15" RadiusY="15" HorizontalAlignment="Center" Canvas.Left="687" Canvas.Top="364" VerticalAlignment="Top"/>
@@ -187,20 +146,14 @@
         <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="502" Canvas.Left="607" Canvas.Top="519" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Misc:DashedLine.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Misc:DashedLine.RenderTransform>
         </Misc:DashedLine>
         <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="503" Canvas.Left="386" Canvas.Top="519" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Misc:DashedLine.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Misc:DashedLine.RenderTransform>
         </Misc:DashedLine>
@@ -212,6 +165,8 @@
         <Machines:V01_WCE_Centrifuge Canvas.Left="1034" Canvas.Top="522" Height="152" Width="156" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:VRC_WaterCollectingTank Height="66" Width="93" Canvas.Left="262" Canvas.Top="764" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:VRC_WaterCollectingTank Height="66" Width="93" Canvas.Left="1031" Canvas.Top="764" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Rectangle Height="35" Stroke="Black" Width="2" Canvas.Left="272" Canvas.Top="742" HorizontalAlignment="Left" VerticalAlignment="Top" />
+        <Rectangle Height="35" Stroke="Black" Width="2" Canvas.Left="1041" Canvas.Top="742" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Machines:WaterPump Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Water" BorderBrush="Black" Canvas.Left="286" Canvas.Top="773" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:WaterPump Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Water" BorderBrush="Black" Canvas.Left="1055" Canvas.Top="773" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="234-01-MA1" JumpToLabel="268-01-MA1" Canvas.Left="669" Canvas.Top="667"/>
@@ -237,11 +192,8 @@
         <Labels:DeviceLabel ComponentName="240-01-MA1" Canvas.Left="1006" Canvas.Top="343" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="236-01-MA1" Canvas.Left="155" Canvas.Top="771" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="246-01-MA1" Canvas.Left="924" Canvas.Top="771" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:NT_ConveyorBelt Height="3" Width="206" RenderTransformOrigin="0.5,0.5" Canvas.Left="240" Canvas.Top="61" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="228-01-MA1" Canvas.Left="366" Canvas.Top="93" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Rectangle Height="35" Stroke="Black" Width="2" Canvas.Left="272" Canvas.Top="742" HorizontalAlignment="Left" VerticalAlignment="Top" />
         <Labels:DeviceLabel ComponentName="236-41-LS1" Canvas.Left="200" Canvas.Top="702" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Rectangle Height="35" Stroke="Black" Width="2" Canvas.Left="1041" Canvas.Top="742" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel ComponentName="246-41-LS1" Canvas.Left="969" Canvas.Top="702" HorizontalAlignment="Left" VerticalAlignment="Center" />
     </Canvas>
 </UserControl>
