--- a/Prevu.Synoptics.V4066_BRR/Pages/P288.xaml
+++ b/Prevu.Synoptics.V4066_BRR/Pages/P288.xaml
@@ -11,10 +11,7 @@
         <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="196" StatusComponent="477-01-MA1" Color="Water" Canvas.Left="377" Canvas.Top="226" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="477-32-CV1" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -23,30 +20,21 @@
         <Labels:Pipe Color="Water" Width="135" StatusComponent="288-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="947" Canvas.Top="354" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Color="Water" Width="57" StatusComponent="288-23-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="929" Canvas.Top="393" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Color="Water" Width="98" StatusComponent="288-71-ES1" RenderTransformOrigin="0.5,0.5" Canvas.Left="908" Canvas.Top="287" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -55,10 +43,7 @@
         <Labels:Pipe Color="Water" Width="225" StatusComponent="285-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="619" Canvas.Top="664" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -68,10 +53,7 @@
         <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="262" StatusComponent="236-01-MA1" Color="Water" Canvas.Left="308" Canvas.Top="187" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -79,10 +61,7 @@
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="186" RenderTransformOrigin="0.5,0.5" StatusComponent="286-01-MA1" Canvas.Left="398" Canvas.Top="680">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -93,30 +72,21 @@
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="192" StatusComponent="246-01-MA1" Color="Water" Canvas.Left="324" Canvas.Top="224">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="168" RenderTransformOrigin="0.5,0.5" StatusComponent="283-01-MA1" Canvas.Left="365" Canvas.Top="459">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="52" StatusComponent="283-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="315" Canvas.Top="329">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -124,103 +94,49 @@
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="264" StatusComponent="457-01-MA1" Color="Water" Canvas.Left="325" Canvas.Top="188">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="ByProduct" Width="26" RenderTransformOrigin="0.5,0.5" StatusComponent="286-01-MA1" Canvas.Left="588" Canvas.Top="563">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Machines:CV_Valve_001 HorizontalAlignment="Left" VerticalAlignment="Center" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.5,0.5" Canvas.Left="1154" Canvas.Top="242">
+        <Machines:CV_Valve_001 HorizontalAlignment="Left" VerticalAlignment="Top" Height="50" Width="50" Color="Water" RenderTransformOrigin="0.5,0.5" Canvas.Left="1179" Canvas.Top="266"/>
+        <Machines:CV_Valve_001 HorizontalAlignment="Left" VerticalAlignment="Top" Height="50" Width="50" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="332" Canvas.Top="566">
             <Machines:CV_Valve_001.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="-0.5" ScaleY="0.5"/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="180"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:CV_Valve_001.RenderTransform>
-        </Machines:CV_Valve_001>
-        <Machines:CV_Valve_001 HorizontalAlignment="Left" VerticalAlignment="Center" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="306" Canvas.Top="540">
-            <Machines:CV_Valve_001.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="-0.5" ScaleY="0.5"/>
-                    <SkewTransform/>
-                    <RotateTransform/>
-                    <TranslateTransform />
-                </TransformGroup>
-            </Machines:CV_Valve_001.RenderTransform>
-        </Machines:CV_Valve_001>
-        <Machines:CV_Valve_001 HorizontalAlignment="Left" VerticalAlignment="Center" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="306" Canvas.Top="509">
-            <Machines:CV_Valve_001.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="-0.5" ScaleY="0.5"/>
-                    <SkewTransform/>
-                    <RotateTransform/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:CV_Valve_001.RenderTransform>
-        </Machines:CV_Valve_001>
-        <Machines:WaterPump HorizontalAlignment="Left" VerticalAlignment="Center" Height="44" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1181" Canvas.Top="656">
-            <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="-1"/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="180"/>
-                    <TranslateTransform/>
                 </TransformGroup>
-            </Machines:WaterPump.RenderTransform>
-        </Machines:WaterPump>
+            </Machines:CV_Valve_001.RenderTransform>
+        </Machines:CV_Valve_001>
+        <Machines:CV_Valve_001 HorizontalAlignment="Left" VerticalAlignment="Top" Height="50" Width="50" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="332" Canvas.Top="536">
+            <Machines:CV_Valve_001.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="-1" />
+                </TransformGroup>
+            </Machines:CV_Valve_001.RenderTransform>
+        </Machines:CV_Valve_001>
+        <Machines:WaterPump HorizontalAlignment="Left" VerticalAlignment="Center" Height="44" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1181" Canvas.Top="656"/>
         <Machines:Waste HorizontalAlignment="Center" VerticalAlignment="Top" Height="46" Width="44" Canvas.Left="579" Canvas.Top="560"/>
         <Machines:Waste HorizontalAlignment="Left" VerticalAlignment="Center" Height="46" Width="44" Canvas.Left="319" Canvas.Top="339"/>
-        <Machines:WaterPump Height="46" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1181" Canvas.Top="504" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Machines:WaterPump.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="-1"/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="180"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:WaterPump.RenderTransform>
-        </Machines:WaterPump>
-        <Machines:WaterPump Height="44" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1181" Canvas.Top="430" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Machines:WaterPump.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="-1"/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="180"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:WaterPump.RenderTransform>
-        </Machines:WaterPump>
+        <Machines:WaterPump Height="46" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1181" Canvas.Top="504" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:WaterPump Height="44" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1181" Canvas.Top="430" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Rectangle Height="2" Stroke="Black" Width="90" RenderTransformOrigin="0.5,0.5" Canvas.Left="912" Canvas.Top="240" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:External Height="58" Width="60" RenderTransformOrigin="0.5,0.5" Canvas.Left="980" Canvas.Top="212" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Machines:External.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="-90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Machines:External.RenderTransform>
         </Machines:External>
         <Machines:CV_Valve Canvas.Left="935" Canvas.Top="340" HorizontalAlignment="Left" VerticalAlignment="Center" Height="24" Width="44" RenderTransformOrigin="0.5,0.5">
             <Machines:CV_Valve.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Machines:CV_Valve.RenderTransform>
         </Machines:CV_Valve>
@@ -229,14 +145,15 @@
             <Machines:V01_SCW_Screw_wHopper.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="-1"/>
-                    <SkewTransform/>
-                    <RotateTransform/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Machines:V01_SCW_Screw_wHopper.RenderTransform>
         </Machines:V01_SCW_Screw_wHopper>
         <Machines:V01_DCT_Decanter Canvas.Left="870" Canvas.Top="409" Height="360" Width="224" ComponentName="288-41-LT1" TrendName="LEVEL" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:VRC_WaterCollectingTank Height="78" Width="94" Canvas.Left="444" Canvas.Top="738" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Rectangle Height="35" Stroke="Black" Width="2" Canvas.Left="1323" Canvas.Top="414" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Ellipse Height="16" Stroke="#FFBDBDBD" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="1316" Canvas.Top="443" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Rectangle Height="35" Stroke="Black" Width="2" Canvas.Left="1322" Canvas.Top="680" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Ellipse Height="16" Stroke="#FFBDBDBD" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="1315" Canvas.Top="670" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:WaterPump Height="44" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" BorderBrush="Black" Canvas.Left="468" Canvas.Top="755" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Rectangle Height="35" Stroke="Black" Width="2" Canvas.Left="527" Canvas.Top="723" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="283-01-MA1" JumpToLabel="457-01-MA1" Canvas.Left="511" Canvas.Top="25" Direction="Left"/>
@@ -246,6 +163,7 @@
         <Labels:JumpLabel JumpFromLabel="291-01-MA1" JumpToLabel="229-01-MA1" Canvas.Left="1384" Canvas.Top="416" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="283-01-MA1" JumpToLabel="236-01-MA1" Canvas.Left="200" Canvas.Top="26" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="283-01-MA1" JumpToLabel="246-01-MA1" Canvas.Left="144" Canvas.Top="98" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DetailsLabel ComponentName="286-VIEW" DetailsPageName="D286" Canvas.Left="534" Canvas.Top="580" HideComponentName="True" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="283-01-MA1" Canvas.Left="283" Canvas.Top="194"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="288-21-CV1" Canvas.Left="1159" Canvas.Top="219"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="297-01-MA1" Canvas.Left="1159" Canvas.Top="706"/>
@@ -259,13 +177,8 @@
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="288-41-LT1" Canvas.Left="936" Canvas.Top="498"/>
         <Labels:DeviceLabel ComponentName="285-41-LS1" Canvas.Left="517" Canvas.Top="683" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel ComponentName="286-MICROFILT" Canvas.Left="426" Canvas.Top="580" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:DetailsLabel ComponentName="286-VIEW" DetailsPageName="D286" Canvas.Left="534" Canvas.Top="580" HideComponentName="True" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="288-42-TT1" Canvas.Left="936" Canvas.Top="568" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Rectangle Height="35" Stroke="Black" Width="2" Canvas.Left="1323" Canvas.Top="414" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Ellipse Height="16" Stroke="#FFBDBDBD" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="1316" Canvas.Top="443" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="291-44-FT1" Canvas.Left="1279" Canvas.Top="373" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Rectangle Height="35" Stroke="Black" Width="2" Canvas.Left="1322" Canvas.Top="680" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Ellipse Height="16" Stroke="#FFBDBDBD" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="1315" Canvas.Top="670" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="297-44-FT1" Canvas.Left="1279" Canvas.Top="706" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
