--- a/Prevu.Synoptics.V4066_BRR/Pages/P997.xaml
+++ b/Prevu.Synoptics.V4066_BRR/Pages/P997.xaml
@@ -10,52 +10,30 @@
              x:Class="Prevu.Synoptics.P997" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
-        <Labels:Pipe Width="68" StatusComponent="884-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="932" Canvas.Top="451" HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct"/>
-        <Labels:Pipe Width="74" StatusComponent="884-01-MA1" RenderTransformOrigin="0.5,0.5"  VisibilityComponent="879-21-CV1" VisibilitySignal="LS1" Canvas.Left="961" Canvas.Top="486" HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct">
+        <Labels:Pipe Width="107" StatusComponent="924-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1011" Canvas.Top="357" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="56" StatusComponent="924-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1088" Canvas.Top="383" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="107" StatusComponent="924-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1191" Canvas.Top="170" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="56" StatusComponent="924-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1268" Canvas.Top="196" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="94" StatusComponent="894-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1041" Canvas.Top="269" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="144" StatusComponent="894-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1061" Canvas.Top="339" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="94" StatusComponent="894-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1221" Canvas.Top="82" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="144" StatusComponent="894-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1241" Canvas.Top="152" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="90" StatusComponent="929-31-CV1" RenderTransformOrigin="0.5,0.5"  VisibilityComponent="929-31-CV1" VisibilitySignal="LS1" Canvas.Left="1013" Canvas.Top="502" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="90" StatusComponent="884-01-MA1" RenderTransformOrigin="0.5,0.5" VisibilityComponent="899-31-CV1" VisibilitySignal="LS1" Canvas.Left="886" Canvas.Top="603" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="106" StatusComponent="884-01-MA1" RenderTransformOrigin="0.5,0.5" VisibilityComponent="899-31-CV1" VisibilitySignal="LS2" Canvas.Left="1012" Canvas.Top="601" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="90" StatusComponent="929-31-CV1" RenderTransformOrigin="0.5,0.5"  VisibilityComponent="929-31-CV1" VisibilitySignal="LS1" Canvas.Left="1193" Canvas.Top="315" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="104" StatusComponent="929-31-CV1" RenderTransformOrigin="0.5,0.5" VisibilityComponent="929-31-CV1" VisibilitySignal="LS2" Canvas.Left="1320" Canvas.Top="314" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="104" StatusComponent="929-31-CV1" RenderTransformOrigin="0.5,0.5" VisibilityComponent="929-31-CV1" VisibilitySignal="LS2" Canvas.Left="1140" Canvas.Top="501" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -65,10 +43,7 @@
         <Labels:Pipe Width="186" RenderTransformOrigin="0.5,0.5" StatusComponent="898-01-MA1" PipeHeight="Medium" Canvas.Left="448" Canvas.Top="312" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="939-31-CV1" VisibilitySignal="LS1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform />
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -76,60 +51,42 @@
         <Labels:Pipe Width="90" StatusComponent="898-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilityComponent="997-31-CV1" VisibilitySignal="LS1" Canvas.Left="429" Canvas.Top="494" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="92" StatusComponent="898-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilityComponent="997-31-CV1" VisibilitySignal="LS2" Canvas.Left="562" Canvas.Top="499" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="14" RenderTransformOrigin="0.5,0.5" StatusComponent="997-32-CV1" Canvas.Left="446" Canvas.Top="519" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform />
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="14" RenderTransformOrigin="0.5,0.5" StatusComponent="997-32-CV1" Canvas.Left="488" Canvas.Top="519" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform />
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="14" RenderTransformOrigin="0.5,0.5" StatusComponent="997-33-CV1" Canvas.Left="579" Canvas.Top="519" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform />
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="14" RenderTransformOrigin="0.5,0.5" StatusComponent="997-33-CV1" Canvas.Left="621" Canvas.Top="519" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform />
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -137,18 +94,13 @@
         <Labels:Pipe Width="82" RenderTransformOrigin="0.5,0.5" StatusComponent="898-01-MA1" PipeHeight="Medium" Canvas.Left="339" Canvas.Top="297" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="939-31-CV1" VisibilitySignal="LS2">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform />
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="64" StatusComponent="898-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="321" Canvas.Top="261" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="939-31-CV1" VisibilitySignal="LS2"/>
-        <Machines:V01_DV_DoubleBagsDiverter Canvas.Left="916" Canvas.Top="488" Height="86" Width="164" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:V01_DV_DoubleBagsDiverter Canvas.Left="1223" Canvas.Top="200" Height="86" Width="164" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:V01_BBF_DoubleBag Canvas.Left="855" Canvas.Top="615" Height="166" Width="286" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:V01_BBF_DoubleBag Canvas.Left="1162" Canvas.Top="327" Height="166" Width="286" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_DV_DoubleBagsDiverter Canvas.Left="1043" Canvas.Top="387" Height="86" Width="164" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Machines:V01_BBF_DoubleBag Canvas.Left="982" Canvas.Top="514" Height="166" Width="286" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Machines:V01_BBF_DoubleBag Canvas.Left="398" Canvas.Top="506" Height="166" Width="286" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_DV_DoubleBagsDiverter Canvas.Left="459" Canvas.Top="385" Height="94" Width="164" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_DV_Diverter Canvas.Left="237" Canvas.Top="217" Height="60" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -160,21 +112,17 @@
                 </TransformGroup>
             </Machines:External.RenderTransform>
         </Machines:External>
-        <Labels:JumpLabel JumpFromLabel="929-BAGS" JumpToLabel="924-01-MA1" Canvas.Left="1120" Canvas.Top="138" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:JumpLabel JumpFromLabel="929-BAGS" JumpToLabel="894-01-MA1" Canvas.Left="1150" Canvas.Top="50" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:JumpLabel JumpFromLabel="929-BAGS" JumpToLabel="924-01-MA1" Canvas.Left="940" Canvas.Top="325" HorizontalAlignment="Left" VerticalAlignment="Top" />
+        <Labels:JumpLabel JumpFromLabel="929-BAGS" JumpToLabel="894-01-MA1" Canvas.Left="970" Canvas.Top="237" HorizontalAlignment="Left" VerticalAlignment="Top" />
         <Labels:JumpLabel JumpFromLabel="939-31-CV1" JumpToLabel="898-01-MA1" Canvas.Left="70" Canvas.Top="194" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:JumpLabel JumpFromLabel="899-BAGS" JumpToLabel="884-01-MA1" Canvas.Left="855" Canvas.Top="419" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:DetailsLabel ComponentName="899-BAGS" DetailsPageName="D899" Canvas.Left="972" Canvas.Top="669" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DetailsLabel ComponentName="929-BAGS" DetailsPageName="D929" Canvas.Left="1279" Canvas.Top="381" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="929-31-CV1" Canvas.Left="1257" Canvas.Top="268" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="899-31-CV1" Canvas.Left="952" Canvas.Top="556" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DetailsLabel ComponentName="929-BAGS" DetailsPageName="D929" Canvas.Left="1099" Canvas.Top="568" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DetailsLabel ComponentName="997-BAGS" DetailsPageName="D997" Canvas.Left="515" Canvas.Top="564" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="929-31-CV1" Canvas.Left="1077" Canvas.Top="455" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="997-31-CV1" Canvas.Left="575" Canvas.Top="354" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="997-SHAKE" Canvas.Left="496" Canvas.Top="454" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="997-41-BAG" Canvas.Left="430" Canvas.Top="661" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="997-42-BAG" Canvas.Left="562" Canvas.Top="661" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="939-31-CV1" Canvas.Left="237" Canvas.Top="158" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel ComponentName="939-71-ES1" Canvas.Left="306" Canvas.Top="357" HorizontalAlignment="Left" VerticalAlignment="Center" />
-
     </Canvas>
 </UserControl>
